--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body text=SteelBlue bgcolor=springgreen>
 <h1>randomness</h1>
  i am writing this because i have nothing to do
-<a href= "https://chatgpt.com/c/68738d75-dd9c-8008-b4ef-2f330b5bc132">open chat gpt conversation</a>
+<a href= " https://www.youtube.com/watch?v=dQw4w9WgXcQ">open chat gpt conversation</a>
 </body>
 </html>
